--- a/VocalVenture/src/App.css
+++ b/VocalVenture/src/App.css
@@ -15,6 +15,21 @@
   }
 
 
+/* CSS (in your styles.css or similar) */
+.custom-strike {
+  position: relative;
+}
+
+.custom-strike::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 1px; /* thickness of the line */
+  background: red; /* color of the strikethrough line */
+  z-index: 1;
+}
 
   .modeActive{
     @apply border-l-4 w-full border-indigo-500  bg-white/75 w-auto mb-1 pl-5 font-medium mr-3 ml-3 p-1 rounded-md cursor-pointer 
